fixed layout issues

--- a/portfolio.css
+++ b/portfolio.css
@@ -5,6 +5,9 @@
 #51694B;
 */
 
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: 'Arimo', sans-serif;
     margin: 0;
@@ -12,8 +15,16 @@ body {
     padding-top: 40px;
 }
 
+.container {
+    width: 100%;
+    margin: auto;
+    
+}
+
+
 .header {
     background: #8EA6C8;
+    width: 100%;
     height: 600px;
     margin: 0;
 }
@@ -59,19 +70,8 @@ body {
     background-color: #8EA6C8;
 }
 
-.about {
-    background: #B2DBE2;
-    margin-bottom: 0;
-    padding-bottom: 20px;
-}
-
-.footer {
-    background: #B2DBE2;
-    margin-top: 0;
-}
-
 .sections {
-    margin-left: 50px;
+    /* margin-left: 50px; */
     padding-top: 30px;
     margin-top: 10px;
     text-align: center;
@@ -81,22 +81,22 @@ body {
     clear:both;
 }
 
-.cards {
-    width: 200px;
+.item {
+    width: 25%;
     float: left;
-    display: inline-block;
-    text-align: center;
-    padding-top:20px;   
-    margin-left: 500px;
-  
-}
-
-.des1 {
     
-    float: right;
-    width: 300px;
-} 
+  }
 
+   .item.left {
+      margin-left: 300px;
+      text-align: center;
+      
+  }
+
+  .item.right {
+      padding-top: 50px;
+      margin-left: 0;
+  }
 
 .about-summary p {
   margin-left: 400px;
@@ -112,28 +112,34 @@ body {
     margin-left: 400px;
 }
 
-/* .about-summary {
-    float: left;
+.about-summary {
+    
     display: inline-block;
+    width: 60%;
     background: #B2DBE2;
     margin-bottom: 0;
     padding-bottom: 20px;
 }
 .author {
-    float: right;
+   width: 25%;
     display: inline-block;
-    margin-right: 200px;
+    background: #B2DBE2;
+    margin-bottom: 0;
+    padding-bottom: 20px;
+    padding-left: 20px;
+}
+
+
+.about {
     background: #B2DBE2;
     margin-bottom: 0;
     padding-bottom: 20px;
 }
-.author img {
-    padding: 0;
-    margin: 0;
+
+.footer {
     background: #B2DBE2;
-} */
-
-
+    margin-top: 0;
+}
 
 .footer-links li a {
     font-size: 22px;
